New Changes with Queue refactoring